--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,12 @@ License: none (public domain)
 */
 /*Large screen*/
 html {
-    background-color:#020659;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color:#020659;  
   }
   
   body {
     background-color: #2104D9;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0 auto;
     padding: 25px;
     min-width: 375px;
@@ -24,41 +24,91 @@ html {
   
   header {
     grid-area: header;
+    width: 100%;
+    background-image: linear-gradient(to right #2104d9 to #020659);
   }
-  nav a :hover {
+  
+  nav {
+    background-color: #020873;
+    padding: 5px;
+    position: relative;
+    top: 0px;
+  }
+  
+  nav a:hover {
   background-color: #590242;
+  color:#ffffff;
   }
-  /*nav {
-    background-color: gradiate:
-  }*/
+  nav a {
+    color:#ffffff
+  }
+  nav li {
+    display: inline-block;
+  }
+  nav h2 {
+    visibility: hidden;
+  }
+  img {
+    float: right;
+  }
+  /*
   nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #2104D9;
     color: #ffffff;
-  }
+  }*/
   
-  .button {
+  input button {
     background-color:#590242 ;
     color:#ffffff;
+    float: right;
   }
   footer {
     grid-area: footer;
     display: block;
     text-align: center;
     color: #590242;
+    width: 100%;
   }
+
+  /* TEXT - font sizes
+  h1 {font-size:1.25em;}
+  h2,h3 {font-size: 1em;}
+  p,dl,dd {font-size: 1em;}
+  footer p {font-size: .75em;}
+  
+  body
+  h1{
+    font-size: 1.25em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  h2 + h3 { 
+    font-size: 1em;}
+  footer
+  */
+
 /*Trending songs */
+#trending {
+    background: #ffffff;
+    color: #590242;
+}
+
 
 /*Your Playlist */
-.your {
+#your {
     background-color: #0D8DFB;
+    background-image: #2699fb;
     color:#ffffff;
   }
 
 /*Curated Playist*/
-
+#curated {
+    background-color: #2104d9;
+    background-image: #030a8c;
+    color:#ffffff;
+}
 
   /*Mobile first-Menu
   Menu Code for Mobile First Style (minus the bits you know how to do): */
@@ -144,18 +194,23 @@ html {
   
   /* Scrollbar */
   #trending ::-webkit-scrollbar {
-  
+    width: 15px;
   }
-  #trending ::-webkit-scrollbar-track {
+  #trending ::-webkit-scrollbar-track { 
+    box-shadow: inset 0 0 15px #590242;
   
   }
   #trending ::-webkit-scrollbar-thumb {
+    background: #590242;
+    border-radius: 5px;
   
   }
   #trending ::-webkit-scrollbar-thumb:hover {
+    background: #020659;
   
   }
   #playlists ::-webkit-scrollbar, #curated ::-webkit-scrollbar {
+
   
   }
   #playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track  {
