--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,13 @@ html {
     color: #ffffff;
   }*/
   
+  /*
   input button {
     background-color:#590242 ;
     color:#ffffff;
     float: right;
-  }
+  }*/
+  
   footer {
     grid-area: footer;
     display: block;
