--- a/styles.css
+++ b/styles.css
@@ -2,68 +2,6 @@
 v2.0| 20110126 
 License: none (public domain)
 */
-/* mobile*/
-/*Mobile first-Menu
-  Menu Code for Mobile First Style (minus the bits you know how to do): */
-  @media screen { min-width: 375;
-
-  } 
-   ul {
-       overflow: hidden;
-       max-height: 0;
-       transition: max-height .2s ease-out;
-   }
-   label {
-       cursor: pointer;
-       display: inline-block;
-       padding: 28px 20px;
-       position: relative;
-       user-select: none;
-   }
-   label span {
-       background-color: #ffffff;
-       display: block;
-       height: 2px;
-       position: relative;
-       transition: background-color .2s ease-out;
-       width: 18px;
-   }
-   label span:before, label span:after {
-       background: #ffffff;
-       content: '';
-       display: block;
-       height: 100%;
-       position: absolute;
-       transition: all .2s ease-out;
-       width: 100%;
-   }
-   label span:before {
-       top: 5px;
-   }
-   label span:after {
-       top: -5px;
-   }
-   input {
-       display: none;
-   }
-   input:checked ~ ul {
-       max-height: 500px;
-   }
-   input:checked ~ label span {
-       background: transparent;
-   }
-   input:checked ~ label span:before {
-       transform: rotate(-45deg);
-   }
-   input:checked ~ label span:after {
-       transform: rotate(45deg);
-   }
-   input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
-       top: 0;
-   }
-  
-
-
 /*Large screen*/
 html {
     background-color:#020659;  
@@ -111,7 +49,7 @@ html {
     color:#ffffff;
     background-color: #020873;
     display: block;
-    padding: 5px;
+    padding: 5px 5px;
     position: relative;
     margin: 5px;
   
@@ -129,8 +67,12 @@ html {
   img {
     float: right;
   }
+
+  .muza {
+    float: none;
+  }
   /*
-  nav ul {
+  nav li {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -194,8 +136,8 @@ html {
    /* background: #ffffff;*/
     color: #590242;
     display: block;
-    padding: 5px;
-    margin: 25px 0;
+    padding: 0px;
+    margin: 0px 0;
     grid-template-columns: (1fr 1fr 1fr 1fr);
 }
 
@@ -210,8 +152,8 @@ figure {
     color:#ffffff;
     float: left;
     display: grid;
-    padding: 5px;
-    margin: 25px 0;
+    padding: 0px;
+    margin: 0px 0;
     grid-template-columns:(1fr 1fr 1fr 1fr);
   }
 
@@ -222,8 +164,8 @@ figure {
     color:#ffffff;
     float: right;
     display:grid;
-    padding: 5px;
-    margin: 25px 0;
+    padding: 0px;
+    margin: 0px 0;
     grid-template-columns:(1fr 1fr 1fr 1fr);
 }
  
@@ -276,4 +218,65 @@ figure {
     background: #020659;
   
   }
+
+  /* mobile*/
+/*Mobile first-Menu
+  Menu Code for Mobile First Style (minus the bits you know how to do): */
+  @media screen { min-width: 375;
+
+  } 
+   ul {
+       overflow: hidden;
+       max-height: 0;
+       transition: max-height .2s ease-out;
+   }
+   label {
+       cursor: pointer;
+       display: inline-block;
+       padding: 28px 20px;
+       position: relative;
+       user-select: none;
+   }
+   label span {
+       background-color: #ffffff;
+       display: block;
+       height: 2px;
+       position: relative;
+       transition: background-color .2s ease-out;
+       width: 18px;
+   }
+   label span:before, label span:after {
+       background: #ffffff;
+       content: '';
+       display: block;
+       height: 100%;
+       position: absolute;
+       transition: all .2s ease-out;
+       width: 100%;
+   }
+   label span:before {
+       top: 5px;
+   }
+   label span:after {
+       top: -5px;
+   }
+   input {
+       display: none;
+   }
+   input:checked ~ ul {
+       max-height: 500px;
+   }
+   input:checked ~ label span {
+       background: transparent;
+   }
+   input:checked ~ label span:before {
+       transform: rotate(-45deg);
+   }
+   input:checked ~ label span:after {
+       transform: rotate(45deg);
+   }
+   input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
+       top: 0;
+   }
+  
   
