--- a/styles.css
+++ b/styles.css
@@ -6,32 +6,21 @@ License: none (public domain)
 html {
     background-color:#020659;  
   }
-  /*
-  body {
-    background-color: #2104D9;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0 auto;
-    padding: 25px;
-    display: grid;
-  }*/
 
   /*body*/
   body {
-
+    background-color: #2104D9;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /*background-color: #2104D9;*/
     display: grid;
     grid-area: auto;
   }
   
   /*header*/
-  header {
-    grid-area: header;
+  .header {
+    grid-area: hd;
     width: 100%;
     background-image: linear-gradient(to right, #020873 , #020659);
-  margin: 5px;
-  padding: 5px;
-
+    padding: 5px 5px 5px 5px;
   }
   /*
   header h1 {
@@ -40,8 +29,7 @@ html {
 
   /*navigation*/
  nav li {
-   /* display: inline-block;*/
-    list-style: none;
+   display: inline-block;
     
   }
 
@@ -49,9 +37,8 @@ html {
     color:#ffffff;
     background-color: #020873;
     display: block;
-    padding: 5px 5px;
+    padding: 5px 5px 5px 5px;
     position: relative;
-    margin: 5px;
   
   } 
   nav a:hover {
