--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,10 @@ html {
   body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: grid;
-    grid-area: auto;
   }
   
   /*header*/
   header {
-    grid-area: hd;
-    width: 100%;
     background-image: linear-gradient(to right, #020873 , #020659);
     padding: 5px 5px 5px 5px;
   }
@@ -59,7 +56,7 @@ html {
   buttonA, buttonB ,buttonC {
     background-color:#590242 ;
     color:#ffffff;
-    float: right;
+    float: none;
   }
 
 /*footer*/
@@ -93,7 +90,8 @@ html {
 #trending {
    background: #ffffff;
     color: #590242;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     float: inline-start;
     padding: 10px 10px 10px 10px;
     margin: 0px 0;
@@ -110,7 +108,8 @@ html {
     background-image: #2699fb;*/
     color:#ffffff;
     float: left;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     padding: 0px;
     margin: 0px 0;
   }
@@ -125,12 +124,14 @@ html {
     background-image: #030a8c;
     color:#ffffff;
     float: right;
-    display:grid;
+    display:flex;
+    flex-wrap: wrap;
     padding: 0px;
     margin: 0px 0;
 }
  #curated img {
   float:right;
+  
  }
   
   /*Audio 
