--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,14 @@ html {
     min-width: 375px;
     margin: 0 auto;
   }
-  
-  /*header*/
-  header {
+  #smooth {
     background-image: linear-gradient(to right, #020873 , #020659);
     padding: 10px 5px 5px 5px;
+
+  }
+  /*header*/
+  header {
+    
   }
 
   /*navigation*/
