--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,9 @@ html {
   /*navigation*/
  nav li {
     display: inline-block;
-    background-color: #020659;
   } 
 
   nav a {
-    background-color: #020873;
     color: #ffffff;
     text-align: center;
     position: relative;
@@ -51,7 +49,12 @@ html {
     float: top;
     position: sticky;
   }
-  
+  /*wrap
+  .wrapper {
+    width: 100%;
+    max-width: 375px;
+    margin:auto;
+  }*/
  
   /*buttons*/
 .buttona {
@@ -59,18 +62,21 @@ html {
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   float: inline-start;
+  padding: 5px 5px;
 }
 .buttonb {
   background-color: #590242;
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   float: inline-start;
+  padding: 5px 5px;
 }
 .buttonc {
   background-color: #590242;
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   float: inline-start;
+  padding: 5px 5px;
 }
   /* TEXT */
   h1 {
@@ -104,8 +110,8 @@ dt {
 #trending {
     background-color: #ffffff;
     color: #590242;
-    display: flex;
-    flex-wrap: wrap;
+    /*display: flex;
+    flex-wrap: wrap;*/
     padding: 10px 10px 10px 10px;
     margin: 0px 0;
   
@@ -127,6 +133,7 @@ dt {
     color:#ffffff;
     float: left;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     padding: 0px;
     margin: 0px 0;
@@ -149,6 +156,7 @@ dt {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     float: right;
     display:flex;
+    flex-direction: column;
     flex-wrap: wrap;
     padding: 0px;
     margin: 0px 0;
